CAF-2693: Add support for elasticsearch string types (i.e. keyword and text)
