# caf-audit-service-contract/src/main/resources/com/hpe/caf/services/audit/contract/swagger.yaml
@@ -120,6 +120,13 @@ definitions:
           - double
           - boolean
           - date
+      paramIndexingHint:
+        type: string
+        description: Indexing hint for audit event parameter storage. Applies to parameters of type string only.
+        default: keyword
+        enum:
+          - fulltext
+          - keyword
       paramColumnName:
         type: string
         description: Alternative field name to be used in the event that multiple audit events comprise of parameters with the same name.
